# docs/swagger.json
@@ -38,7 +38,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/dtos.Response"
+                                    "$ref": "#/definitions/dtos.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -79,7 +79,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/dtos.Response"
+                                    "$ref": "#/definitions/dtos.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -119,7 +119,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dtos.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dtos.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -160,7 +172,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/dtos.Response"
+                                    "$ref": "#/definitions/dtos.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -206,7 +218,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/dtos.Response"
+                                    "$ref": "#/definitions/dtos.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -241,7 +253,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/dtos.Response"
+                                    "$ref": "#/definitions/dtos.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -287,7 +299,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/dtos.Response"
+                                    "$ref": "#/definitions/dtos.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -331,7 +343,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/dtos.Response"
+                                    "$ref": "#/definitions/dtos.SuccessResponse"
                                 },
                                 {
                                     "type": "object",
@@ -377,19 +389,6 @@
                 }
             }
         },
-        "dtos.ErrorInfo": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string",
-                    "example": "404"
-                },
-                "message": {
-                    "type": "string",
-                    "example": "not found"
-                }
-            }
-        },
         "dtos.MerchantCommisions": {
             "type": "object",
             "properties": {
@@ -398,23 +397,6 @@
                 },
                 "total": {
                     "type": "number"
-                }
-            }
-        },
-        "dtos.Meta": {
-            "type": "object",
-            "properties": {
-                "page": {
-                    "type": "integer"
-                },
-                "per_page": {
-                    "type": "integer"
-                },
-                "total": {
-                    "type": "integer"
-                },
-                "total_pages": {
-                    "type": "integer"
                 }
             }
         },
@@ -432,16 +414,10 @@
                 }
             }
         },
-        "dtos.Response": {
+        "dtos.SuccessResponse": {
             "type": "object",
             "properties": {
                 "data": {},
-                "error": {
-                    "$ref": "#/definitions/dtos.ErrorInfo"
-                },
-                "meta": {
-                    "$ref": "#/definitions/dtos.Meta"
-                },
                 "success": {
                     "type": "boolean",
                     "example": true
