# presentation/transaction/controller.go
@@ -16,7 +16,7 @@ import (
 // @Accept			json
 // @Produce		json
 // @Param		body	body		dtos.TransactionDTO		true	"Request body"
-// @Success		200		{object}	dtos.Response{data=dtos.TransactionResponseDataDTO,error=nil}
+// @Success		200		{object}	dtos.SuccessResponse{data=dtos.TransactionResponseDataDTO,error=nil}
 // @Router			/transaction [post]
 func createTransaction(c *gin.Context) {
 	logger := c.MustGet("logger").(*slog.Logger)
@@ -46,7 +46,7 @@ func createTransaction(c *gin.Context) {
 // @Tags	transactions
 // @Description	This endpoint retreives the commisions report: total commisions generated by system and total commisions by merchant
 // @Produce		json
-// @Success		200		{object}	dtos.Response{data=dtos.Report}
+// @Success		200		{object}	dtos.SuccessResponse{data=dtos.Report}
 // @Router			/transaction/report [get]
 func getCommisionsReport(c *gin.Context) {
 
